styles.css
/* css styles */
body {
    background-color: white;
}

section {
    padding-bottom: 48px;
}

.title {
    color: black;
    width: 100%;
}

.navbar-logo {
    min-height: 50px;
}

.linux-banner {
    background-color: black;
    padding: 5px;
    text-align: center;
    position: sticky;
    top: 75px;
    z-index: 100;
}

.banner-image {
    width: 300px;
}

/* left align text */

.left-align {
    text-align: left;
  }

/* Media query for navbar logo image, mobile mode 1100px and smaller */

@media only screen and (max-width: 1100px) {

    .navbar-logo {
        min-height: 0;
    } 
    
}


@media only screen and (max-width: 990px) {

    .linux-banner {
        top: 50px;
    }

    .nav-footer-center {
        max-width: none !important;
        min-width: 100%;
        left: 0 !important;
    }

    .container1, .container2 {
        grid-template-columns: 1fr !important; /* 1 column full width for mobile */
    }


}

section#hero {
    padding-top: 128px;
    padding-bottom: 72px;
    padding-left: 80px;
    padding-right: 80px;
    text-align: center;
    color: white;
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('hero-picture.png');
    /* Display 1 */
    font-size: 28px;
    font-style: normal;
    font-weight: 500;
}

section#hero > p {
    font-size: 18px; 
    font-style: normal;
    font-weight: 400;
    line-height: 28px; /* 155.556% */ 
    max-width: 768px;
    text-align: center; 
    margin: 0 auto;
}

/* aligning sections */

/* .what-is-r-section {
    margin: 20px;
}*/

.joining-r-section {
    a:link {
        color: white;
    }
    a:visited {
        color: white;
    }
    }
    
.what-is-r-section {
    a:link {
        color: white;
    }
    a:visited {
        color: white;
    }
    }
    
.need-help-section {
    a:link {
        color: white;
    }
    a:visited {
        color: white;
    }
    }

.preview-picture {
    max-width: 200px;
}

div.nav-footer {
    color: white;
}

div.nav-footer a {
    color: white !important;
}

div.nav-footer a:hover {
    color: #2780e3 !important;
}

.dark-button {
    background-color: black;
    color: white;
    border: 1px solid white;
    padding: 8px;
}

.dark-button:hover {
    background-color: white;
    color: black;
    border: 1px solid black;
}

.light-button {
    background-color: white;
    color: black;
    border: 1px solid black;
    padding: 8px;
}

.light-button:hover {
    background-color: black;
    color: white;
    border: 1px solid white;
}

.platinum-img {
    width: 200px;
}

.platinum {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 40px;
    max-width: 100%;
}

.silver {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 40px;
    max-width: 100%;
}

.silver-img {
    width: 140px;
}



.nav-footer-center {
    max-width: 505px;
    left: -310px;
    position: relative;
    text-align: left;
  }
  
.container1 {
    display: grid;
    grid-template-columns: 1fr 1fr; /* Two columns with equal width */
    gap: 20px; /* Space between columns */
}

.column1 {
    text-align: left;
}

.column1 img {
    max-width: 100%;
}

.container2 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr; /* Two columns with equal width */
    gap: 20px; /* Space between columns */
}

.column2 {
    text-align: left;
}

.column2 img {
    max-width: 100%;
}

iframe { 
    width: 100%;
    aspect-ratio: 16 / 9;
}

td {
    padding: 10px;
    text-align: left;
}

table, th, td {
    border: 1px solid black;
    border-collapse: collapse;
} 

